# telarex

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.brew/: trex.rb
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.scoop/: trex.json
crates/telarex-core/: Cargo.toml  README.md
crates/telarex-core/src/: clipboard.rs  git_sidecar.rs  lib.rs
crates/telarex-core/src/actor/: mod.rs
crates/telarex-core/src/buffer/: buffer_manager.rs  document.rs  history.rs  macro_engine.rs  managed.rs  mod.rs  motions.rs
crates/telarex-core/src/command/: mod.rs
crates/telarex-core/src/config/: mod.rs  schema.rs  style_registry.rs  theme_engine.rs
crates/telarex-core/src/crdt/: mod.rs  sync_engine.rs
crates/telarex-core/src/database/: mod.rs
crates/telarex-core/src/errors/: mod.rs
crates/telarex-core/src/lsp/: mod.rs
crates/telarex-core/src/network/: lodgenet.rs  mod.rs
crates/telarex-core/src/network/auth/: mod.rs
crates/telarex-core/src/syntax/: mod.rs  stylesheet.rs  tree_highlighter.rs
crates/telarex-core/src/workspace/: mod.rs
crates/telarex-core/tests/: actor_tests.rs  config_tests.rs  e2e.rs  identity_tests.rs  sync_integration.rs
crates/telarex-tui/: Cargo.toml
crates/telarex-tui/src/: app.rs  main.rs  tui_compat.rs
crates/telarex-tui/src/components/: mod.rs  tab_controller.rs
crates/telarex-tui/src/components/bars/: mod.rs  status_bar.rs  tab_bar.rs
crates/telarex-tui/src/components/editor/: mod.rs
crates/telarex-tui/src/components/explorer/: mod.rs
crates/telarex-tui/src/components/layout/: mod.rs
crates/telarex-tui/src/components/modals/: config_modal.rs  error_modal.rs  input_modal.rs  macro_palette.rs  mod.rs  modal.rs
crates/telarex-tui/src/components/palettes/: command.rs  mod.rs  search.rs
crates/telarex-tui/src/events/: actions.rs  key_mapper.rs  mod.rs
crates/telarex-tui/src/network/: mod.rs
crates/telarex-tui/src/screens/: config_view.rs  editor_view.rs  mod.rs  welcome_view.rs
crates/telarex-tui/src/theme/: mod.rs
crates/telarex-tui/src/utils/: mod.rs
docs/: ARCHITECTURE.md  BETA_GUIDE.md  focus-system-stabilization.md  hello.txt  market-analysis-2026.md  test_rusty.rs
plans/: SPEC_AESTHETIC_REVAMP.md  SPEC_CONFIGURATION_REVAMP.md  SPEC_DEPENDENCIES_AND_MODULES.md  SPEC_LODGE_OWNERSHIP_AND_IDENTITY.md  SPEC_TESTING_EXPANSION.md  architectural-hardening-final.md  architectural-hardening.md  architectural-refactor.md  beta-roadmap.md  config-expansion-draft.md  daily-driver-evolution-final.md  daily-driver-evolution.md  functional-integrity-plan.md  lodgenet-global.md  lsp-autocomplete.md  macro-system.md  modularization-and-events.md  modularization-and-testing.md  modularization-and-ui.md  omento-ui-polish.md  omni-layout-engine.md  rendering-overhaul.md  rendering-reset-plan.md  restoration-and-async-hardening.md  syntax-and-lsp-phase.md  tingly-phase.md
test_fixtures/lsp/: test_css.css  test_html.html  test_javascript.js  test_json.json  test_python.py  test_rusty.rs  test_toml.toml  test_tsx.tsx  test_typescript.ts  test_yaml.yaml
themes/: bloody_red.toml  catppuccin_mocha.toml  dracula.toml  everforest.toml  nordic_frost.toml  tokyo_night.toml
