[workspace]
members = ["crates/telarex-core", "crates/telarex-tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TelaRex Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/telarex/telarex"
rust-version = "1.80"

[workspace.dependencies]
# ============= Core Utilities =============
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
walkdir = "2.5"
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }

# ============= Text Buffer & Syntax =============
ropey = "1.6"
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-json = "0.24"
tree-sitter-md = "0.3"
tree-sitter-toml-ng = "0.7"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-yaml = "0.7"

# ============= TUI Framework =============
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "serde", "layout-cache"] }
crossterm = { version = "0.29", default-features = false, features = ["event-stream"] }

# ============= Async Runtime =============
tokio = { version = "1.47", features = ["full"] }

# ============= Shared Utils =============
uuid = { version = "1.8", features = ["v4", "serde"] }
hex = "0.4"
rand = "0.8"
futures = "0.3"
git2 = "0.19"
arboard = "3.4"

# ============= Identity & Crypto =============
sha2 = "0.10"
pqc_dilithium = { version = "0.2", features = ["mode2"] }

# ============= Collaboration =============
automerge = "0.8"
libp2p = { version = "0.56", features = ["tokio", "noise", "yamux", "tcp", "mdns"] }

# ============= Dev Dependencies =============
proptest = { version = "1.5" }
tempfile = "3.10"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"