[package]
name = "telarex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
lsp = []
clipboard = ["arboard"]
git = ["git2"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
ropey = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-yaml = { workspace = true }
walkdir = { workspace = true }
automerge = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
ratatui = { workspace = true }
libp2p = { workspace = true, features = ["gossipsub", "mdns", "noise", "tcp", "yamux", "tokio", "macros", "request-response", "identify", "kad", "ping"] }
futures = { workspace = true }
pqc_dilithium = { workspace = true }
arboard = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
